debug.log
2021-03-21 16:21:48,430 - tool.logging - DEBUG - Initiating a face tracker
2021-03-21 16:21:58,356 - tool.logging - DEBUG - Running a 10.0s check
2021-03-21 16:22:23,879 - tool.logging - DEBUG - Initiating a face tracker
2021-03-21 16:22:28,989 - tool.logging - DEBUG - Running a 10.0s check
2021-03-21 16:22:39,294 - tool.logging - DEBUG - Initiating a face tracker
2021-03-21 16:22:50,856 - tool.logging - DEBUG - Running a 10.0s check
2021-03-21 16:22:59,999 - tool.logging - DEBUG - Initiating a face tracker
2021-03-21 16:53:46,363 - tool.logging - DEBUG - Initiating a face tracker
2021-03-21 16:54:20,577 - tool.logging - DEBUG - Initiating a face tracker
2021-03-21 17:00:27,613 - tool.logging - DEBUG - Initiating a face tracker
2021-03-21 17:09:09,426 - tool.logging - DEBUG - Initiating a face tracker
2021-03-21 17:17:36,380 - tool.logging - DEBUG - Initiating a face tracker
2021-03-21 17:17:40,935 - tool.logging - DEBUG - Initiating a face tracker
2021-03-21 17:17:45,895 - tool.logging - DEBUG - Initiating a face tracker
2021-03-21 17:21:42,596 - tool.logging - DEBUG - Initiating a face tracker
2021-03-21 18:04:14,147 - tool.logging - ERROR - Uncaught exception
  File "<stdin>", line 1
    json.dumps('hello)
                     ^
SyntaxError: EOL while scanning string literal
2021-03-21 19:40:47,041 - tool.logging - DEBUG - Initiating a face tracker
2021-03-21 22:20:15,836 - tool.logging - DEBUG - Initiating a face tracker
2021-03-21 22:22:08,988 - tool.logging - DEBUG - Initiating a face tracker
2021-03-21 22:22:17,220 - tool.logging - DEBUG - Tracking Fail
2021-03-21 22:22:17,236 - tool.logging - DEBUG - Tracking Fail
2021-03-21 22:22:17,255 - tool.logging - DEBUG - Tracking Fail
2021-03-21 22:22:17,270 - tool.logging - DEBUG - Tracking Fail
2021-03-21 22:22:17,293 - tool.logging - DEBUG - Tracking Fail
2021-03-21 22:22:17,311 - tool.logging - DEBUG - Tracking Fail
2021-03-21 22:22:17,326 - tool.logging - DEBUG - Lost face
2021-03-21 22:22:17,334 - tool.logging - DEBUG - Tracking Fail
2021-03-21 22:22:17,346 - tool.logging - DEBUG - Tracking Fail
2021-03-21 22:22:17,361 - tool.logging - DEBUG - Tracking Fail
2021-03-21 22:22:17,483 - tool.logging - DEBUG - Initiating a face tracker
2021-03-21 22:22:19,851 - tool.logging - DEBUG - Running a 10.0s check
2021-03-21 22:22:19,936 - tool.logging - DEBUG - Tracking Fail
2021-03-21 22:22:23,580 - tool.logging - DEBUG - Lost face
2021-03-21 22:22:24,896 - tool.logging - DEBUG - Initiating a face tracker
2021-03-21 22:23:19,680 - tool.logging - DEBUG - Initiating a face tracker
2021-03-21 22:23:28,421 - tool.logging - DEBUG - Initiating a face tracker
2021-03-21 22:23:30,783 - tool.logging - DEBUG - Initiating a face tracker
2021-03-21 22:23:33,283 - tool.logging - DEBUG - Initiating a face tracker
2021-03-21 22:23:39,261 - tool.logging - DEBUG - Initiating a face tracker
2021-03-21 22:23:52,634 - tool.logging - DEBUG - Initiating a face tracker
2021-03-21 22:24:03,627 - tool.logging - DEBUG - Initiating a face tracker
2021-03-21 22:24:15,683 - tool.logging - DEBUG - Running a 10.0s check
2021-03-21 22:24:32,388 - tool.logging - DEBUG - Initiating a face tracker
2021-03-21 22:24:44,731 - tool.logging - DEBUG - Running a 10.0s check
2021-03-21 22:24:44,868 - tool.logging - DEBUG - Initiating a face tracker
2021-03-21 22:24:44,898 - tool.logging - DEBUG - Tracking Fail
2021-03-21 22:25:00,191 - tool.logging - DEBUG - Running a 10.0s check
2021-03-21 22:25:00,443 - tool.logging - DEBUG - Tracking Fail
2021-03-21 22:25:01,824 - tool.logging - DEBUG - Running a 10.0s check
2021-03-21 23:49:18,544 - tool.logging - DEBUG - Initiating a face tracker
2021-03-22 13:41:01,913 - tool.logging - DEBUG - Initiating a face tracker
